objects/Helms_Matchback_Exract__mdt.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchbackQuery__c</fullName>
        <label>MatchbackQuery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Helms Matchback Extract</label>
    <pluralLabel>Helms Matchback Extract</pluralLabel>
</CustomObject>